fix broken links

--- a/cloud/getting-started/start-from-cloud-ui.mdx
+++ b/cloud/getting-started/start-from-cloud-ui.mdx
@@ -142,6 +142,6 @@ For example, the logs of the container **jupyter** are as follows:
 
 Now that you've deployed your first confidential application, you can:
 
-1. **Deploy your existing Docker applications** to TEE - check out the [Deploy Docker App in TEE](/migration)
+1. **Deploy your existing Docker applications** to TEE - check out Phala Cloud [User Guides](/phala-cloud/phala-cloud-user-guides)
 2. **Build an AI agent** in minutes and deploy in one-click with the [Eliza Agent Builder](https://cloud.phala.network/eliza) - check out the [tutorial](https://phala.network/posts/guide-to-exploring-the-phala-cloud-agent-builder) to get started
 3. **Explore advanced features** like debugging, log management, and scaling your applications
