--- a/cloud/getting-started/start-from-cloud-ui.mdx
+++ b/cloud/getting-started/start-from-cloud-ui.mdx
@@ -136,7 +136,7 @@ For example, the logs of the container **jupyter** are as follows:
         <img src="/images/image (8).png" alt="" />
     </Frame>
 
-    You can also request customized Remote Attestation reports programmably via API here: [generate-ra-report.md](/phala-cloud/phala-cloud-user-guides/building-with-tee/generate-ra-report.md "mention").
+    You can also request customized Remote Attestation reports programmably via API here: [generate-ra-report.md](/phala-cloud/phala-cloud-user-guides/building-with-tee/generate-ra-report).
 
 ## Next Steps
 
