--- a/compute-providers/basic-info/budget-balancer.mdx
+++ b/compute-providers/basic-info/budget-balancer.mdx
@@ -35,7 +35,7 @@ It consists of three major components:
 
 ### The mathematical logic of the balancer
 
-As we mentioned in [worker-rewards.mdx](/compute-providers/basic-info/worker-rewards.mdx "mention"), Phala and Khala share a total of 700 million in computing power rewards. The reward distribution between the two chains depends on the computing power quality & quantity of each chain, that is, the sum of shares of workers on the chain.
+As we mentioned in [worker-rewards.mdx](/compute-providers/basic-info/worker-rewards), Phala and Khala share a total of 700 million in computing power rewards. The reward distribution between the two chains depends on the computing power quality & quantity of each chain, that is, the sum of shares of workers on the chain.
 
 #### Basic parameters
 
