--- a/network/references/subbridge/cross-chain-transfer.mdx
+++ b/network/references/subbridge/cross-chain-transfer.mdx
@@ -8,7 +8,7 @@ title: Cross-chain Transfer
 
 This tutorial takes the transfer of PHA from Ethereum to Khala as an example. You can also refer to this tutorial for other EVM ↔ parachain bridge transfers.
 <Frame caption="SubBridge Ethereum to Khala transfer interface">
-    <img src="../../images/subbridge-eth-khala.png" alt="SubBridge Ethereum to Khala transfer interface" />
+    <img src="/images/subbridge-eth-khala.png" alt="SubBridge Ethereum to Khala transfer interface" />
 </Frame>
 
 1. Open [SubBridge](https://subbridge.io/), switch _From_ chain to Ethereum, _To_ chain to Khala, and choose `PHA` as the currency;
@@ -27,7 +27,7 @@ This tutorial takes the transfer of PHA from Ethereum to Khala as an example. Yo
 
 This tutorial takes the transfer of PHA from Khala to Karura as an example, and vice versa for transferring from Karura to Khala. You can also refer to this tutorial for other parachain bridge transfers.\
 <Frame caption="SubBridge parachain transfer interface">
-    <img src="../../images/subbridge-transfer.png" alt="SubBridge parachain transfer interface" />
+    <img src="/images/subbridge-transfer.png" alt="SubBridge parachain transfer interface" />
 </Frame>
 
 1. Open [SubBridge](https://subbridge.io/), switch _From_ chain to Khala, _To_ chain to Karura, and choose `PHA` as the currency;
@@ -42,7 +42,7 @@ This tutorial takes the transfer of PHA from Khala to Karura as an example, and 
 6. Click _Submit_ to sign;\
    
     <Frame caption="SubBridge transaction confirmation">
-        <img src="../../images/subbridge-confirm.png" alt="SubBridge transaction confirmation" />
+        <img src="/images/subbridge-confirm.png" alt="SubBridge transaction confirmation" />
     </Frame>
 7. The transaction is sent from Khala, wait for the transaction to be confirmed;
 8. Then you can go to destination chain’s wallet (in this case, [Karura Apps](https://apps.karura.network/portfolio)) to check whether you have received the token (PHA). If it is not received within 1 minute, you can go to the Khala chain explorer ([Subscan](https://khala.subscan.io/)) to check whether you have sent a transaction; if you have any questions, you can consult our [Discord](https://discord.gg/phala-network).
