--- a/phala-cloud/getting-started/overview.mdx
+++ b/phala-cloud/getting-started/overview.mdx
@@ -1,28 +1,28 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-icon: robot-astromech
 title: Overview
 ---
 
+Phala Cloud offers a secure and private hosting in a TEE using [Dstack](/dstack/overview). This guide will get you started on Phala Cloud and deploy your first CVM in minutes!
 
-There are several ways to get started building with Phala Cloud:
+<Steps>
+<Step>
+### [Create Your Phala Cloud Account](/phala-cloud/getting-started/sign-up-for-cloud-account) (1 minute)
 
-* [Start from Cloud UI](/phala-cloud/getting-started/start-from-cloud-ui) - The easiest way with no coding required
-* [Start from Cloud CLI](/phala-cloud/phala-cloud-user-guides/advanced-deployment-options/start-from-cloud-cli) - For developers who prefer command-line tools
-* [Start from Template](/phala-cloud/getting-started/explore-templates/start-from-template) - Build on top of existing templates
-* [Start from Scratch](#start-from-scratch) - Full control for advanced users
+Go to the [sign-up](https://cloud.phala.network/register) page for Cloud account section to get an official Phala Cloud account to get started.
+</Step>
 
-Before diving into these steps, let's take a look at the requirements needed to build on Phala Cloud.
+<Step>
+### [Your First CVM Deployment](/phala-cloud/getting-started/start-from-cloud-ui) (2-3 minutes)
 
-### Requirements
+Once your account is created, deploy your first CVM without any coding by deploying a Jupyter Notebook.
+</Step>
+</Steps>
 
-* Docker([Docker Desktop](https://www.docker.com/products/docker-desktop/) or [OrbStack](https://orbstack.dev/)): Phala Cloud supports the deployment of **ANY** Docker images. Check out how to build & publish to Docker Hub (i.e. [Docker Tutorial](https://docs.docker.com/get-started/introduction/build-and-push-first-image/))
-* With full Docker support, you can build in **ANY** language you prefer. We have built out an SDK to make it easy for TypeScript/JavaScript and Python programs to call the Phala Cloud SDK functions, but this can be done for **ANY** programming language.
-  * Check the code to see how the RPC calls are constructed
-    * [TypeScript/JavaScript](https://github.com/Leechael/tappd-simulator/blob/main/sdk/js/src/index.ts)
-    * [Python](https://github.com/Leechael/tappd-simulator/blob/main/sdk/python/src/dstack_sdk/client.py)
-* For deployment on Real TEE Server, must publish docker image with OS/arch `linux/amd64`. For local TEE simulator, you can build in **ANY** OS/arch since they won't be running on real TEE hardware.
+<Note type="info">
+If you prefer using a CLI instead of the browser, check out [Start from Cloud CLI](../../phala-cloud/phala-cloud-user-guides/advanced-deployment-options/start-from-cloud-cli.md).
+</Note>
 
-### Join Phala Cloud Community
+## Next Steps
 
-We welcome your feedback and contributions! If you have feature requests, want to report issues, or are interested in contributing to Phala Cloud, please visit our [Github page](https://github.com/Phala-Network/phala-cloud-community) for more information.
+If you encounter any issues during deployment, check our [Troubleshooting](/phala-cloud/be-production-ready/troubleshooting) guide or reach out to our community for support at 🌍 [Global](https://t.me/+nbhjx1ADG9EyYmI9), 🇨🇳 [Chinese](https://t.me/+4PcAE9qTZ1kzM2M9).
