link and page fixes

--- a/phala-cloud/getting-started/core-concepts-refresher.mdx
+++ b/phala-cloud/getting-started/core-concepts-refresher.mdx
@@ -5,4 +5,4 @@ title: Core Concepts Refresher
 ---
 
 
-<table data-view="cards" data-full-width="true"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Confidential VM (CVM)</td><td><a href="../../images/cvm (1).jpg">cvm (1).jpg</a></td><td></td></tr><tr><td>Key Management Service (KMS)</td><td><a href="../../images/KMS (1).jpg">KMS (1).jpg</a></td><td><a href="../../dstack/design-documents/key-management-protocol.md">key-management-protocol.md</a></td></tr><tr><td>GPU TEE</td><td><a href="../../images/confidential-ai-inference-overview.png">confidential-ai-inference-overview.png</a></td><td><a href="../../overview/phala-network/gpu-tee.md">gpu-tee.md</a></td></tr></tbody></table>
+<table data-view="cards" data-full-width="true"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Confidential VM (CVM)</td><td><a href="/images/cvm (1).jpg">cvm (1).jpg</a></td><td></td></tr><tr><td>Key Management Service (KMS)</td><td><a href="/images/KMS (1).jpg">KMS (1).jpg</a></td><td><a href="/dstack/design-documents/key-management-protocol">key-management-protocol</a></td></tr><tr><td>GPU TEE</td><td><a href="/images/confidential-ai-inference-overview.png">confidential-ai-inference-overview.png</a></td><td><a href="/confidential-ai/gpu-tee/llm-in-tee">gpu-tee</a></td></tr></tbody></table>
