--- a/phala-cloud/getting-started/core-concepts-refresher.mdx
+++ b/phala-cloud/getting-started/core-concepts-refresher.mdx
@@ -4,5 +4,48 @@ hidden: true
 title: Core Concepts Refresher
 ---
 
-
-<table data-view="cards" data-full-width="true"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Confidential VM (CVM)</td><td><a href="/images/cvm (1).jpg">cvm (1).jpg</a></td><td></td></tr><tr><td>Key Management Service (KMS)</td><td><a href="/images/KMS (1).jpg">KMS (1).jpg</a></td><td><a href="/dstack/design-documents/key-management-protocol">key-management-protocol</a></td></tr><tr><td>GPU TEE</td><td><a href="/images/confidential-ai-inference-overview.png">confidential-ai-inference-overview.png</a></td><td><a href="/phala-cloud/confidential-ai/gpu-tee/llm-in-tee">gpu-tee</a></td></tr></tbody></table>
+<table data-view="cards" data-full-width="true">
+  <thead>
+    <tr>
+      <th data-hidden data-card-cover data-type="files"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td
+          style={{ maxWidth: "400px", height: "auto", cursor: "pointer" }}
+      >
+        <img
+          src="/images/cvm (1).jpg"
+          alt="Confidential VM (CVM)"
+        />
+        <a
+         href="/phala-cloud/phala-cloud-user-guides/create-cvm/overview">
+          Confidential VM (CVM)
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img
+          src="/images/KMS (1).jpg"
+          alt="Key Management Service (KMS)"
+          style={{ maxWidth: "400px", height: "auto", cursor: "pointer" }}
+        />
+        <a href="/dstack/design-documents/key-management-protocol">
+          Key Management Service (KMS)
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img
+          src="/images/confidential-ai-inference-overview.png"
+          alt="GPU TEE"
+          style={{ maxWidth: "400px", height: "auto", cursor: "pointer" }}
+        />
+        <a href="/phala-cloud/confidential-ai/gpu-tee/llm-in-tee">GPU TEE</a>
+      </td>
+    </tr>
+  </tbody>
+</table>
