update page title and update nvigation

--- a/phala-cloud/getting-started/overview.mdx
+++ b/phala-cloud/getting-started/overview.mdx
@@ -1,6 +1,6 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
-title: Overview
+title: Quick Start Guide
 ---
 
 Phala Cloud offers a secure and private hosting in a TEE using [Dstack](/dstack/overview). This guide will get you started on Phala Cloud and deploy your first CVM in minutes!
