--- a/phala-cloud/faqs.mdx
+++ b/phala-cloud/faqs.mdx
@@ -1,8 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: FAQs
+title: FAQ about Phala Cloud
 ---
-
 
 ## ❓ FAQs
 
