add icon and theme

--- a/index.mdx
+++ b/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Phala Cloud Overview
 cover: images/phala-docs (1).jpg
-coverY: -101
+icon: "book-open"
 ---
 
 Welcome to the official documentation for **Phala** - the secure cloud platform that enables AI developers to deploy applications with hardware-level privacy and verifiable computation.
