--- a/phala-cloud/getting-started/core-concepts-refresher.mdx
+++ b/phala-cloud/getting-started/core-concepts-refresher.mdx
@@ -2,6 +2,7 @@
 description: Quick start guide for deploying confidential applications on Phala Cloud.
 hidden: true
 title: Core Concepts Refresher
+icon: "lightbulb"
 ---
 
 <table data-view="cards" data-full-width="true">
