--- a/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
+++ b/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
@@ -1,6 +1,7 @@
 ---
 description: Quick start guide for deploying confidential applications on Phala Cloud.
 title: Create Your Phala Cloud Account
+icon: "user-plus"
 ---
 
 
