--- a/phala-cloud/gpu-cvm/overview.mdx
+++ b/phala-cloud/gpu-cvm/overview.mdx
@@ -2,6 +2,7 @@
 description: Run Large Language Models securely in GPU Trusted Execution Environment
   (TEE) for confidential AI.
 title: Run LLM in GPU TEE
+icon: "microchip"
 ---
 
 
