--- a/phala-cloud/phala-cloud-user-guides/advanced-deployment-options/start-from-cloud-cli.mdx
+++ b/phala-cloud/phala-cloud-user-guides/advanced-deployment-options/start-from-cloud-cli.mdx
@@ -1,6 +1,7 @@
 ---
 description: Est. 4-5 Minutes
 title: Deploy CVM with Phala Cloud CLI
+icon: "terminal"
 ---
 
 
@@ -260,3 +261,5 @@ This is great! We have now shown we can interact with the TEE special functions 
 ## Conclusion
 
 Congratulations! You have deployed your first CVM into the Phala Cloud. Let's dive into some of the templates we have.
+
+```
