--- a/phala-cloud/phala-cloud-user-guides/building-with-tee/setting-up-custom-domain.mdx
+++ b/phala-cloud/phala-cloud-user-guides/building-with-tee/setting-up-custom-domain.mdx
@@ -1,6 +1,7 @@
 ---
 description: For users that want to bring their own domain for their CVM.
 title: Setting Up Custom Domain
+icon: "globe"
 ---
 
 
