--- a/phala-cloud/phala-cloud-user-guides/building-with-tee/verify-remote-attestation.mdx
+++ b/phala-cloud/phala-cloud-user-guides/building-with-tee/verify-remote-attestation.mdx
@@ -3,6 +3,7 @@ description: Security features and remote attestation capabilities of Phala Clou
   TEE.
 hidden: true
 title: Verify Remote Attestation
+icon: "check-circle"
 ---
 
 
