--- a/phala-cloud/phala-cloud-user-guides/create-cvm/deployment-cheat-sheet.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/deployment-cheat-sheet.mdx
@@ -1,6 +1,7 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
 title: Deployment Cheat Sheet
+icon: "clipboard-list"
 ---
 
 
