--- a/phala-cloud/phala-cloud-user-guides/create-cvm/set-secure-environment-variables.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/set-secure-environment-variables.mdx
@@ -1,6 +1,7 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
 title: Set Secure Environment Variables
+icon: "key"
 ---
 
 When your application requires environment variables, **never set them directly in the Docker Compose file**. Instead, use the **Encrypted Secrets** section to ensure your sensitive data remains secure.
