--- a/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
+++ b/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
@@ -2,6 +2,7 @@
 description: Security features and remote attestation capabilities of Phala Cloud
   TEE.
 title: Security Architecture
+icon: "building"
 ---
 
 
