--- a/phala-cloud/use-cases/tee_with_ai.mdx
+++ b/phala-cloud/use-cases/tee_with_ai.mdx
@@ -2,6 +2,7 @@
 description: Build confidential AI applications with Trusted Execution Environment
   technology.
 title: Building Confidential AI with TEE
+icon: "brain"
 ---
 
 
