--- a/phala-cloud/use-cases/tee_with_fhe_and_mpc.mdx
+++ b/phala-cloud/use-cases/tee_with_fhe_and_mpc.mdx
@@ -1,6 +1,7 @@
 ---
 description: Combine TEE with FHE and MPC for enhanced privacy-preserving computations.
 title: TEE as 2FA for FHE/MPC Systems
+icon: "lock"
 ---
 
 
