--- a/phala-cloud/use-cases/tee_with_zk_and_zkrollup.mdx
+++ b/phala-cloud/use-cases/tee_with_zk_and_zkrollup.mdx
@@ -1,6 +1,7 @@
 ---
 description: Integrate Zero-Knowledge proofs with TEE for verifiable private computing.
 title: Building Multi-Proof System with ZK and TEE
+icon: "zap"
 ---
 
 
@@ -39,4 +40,4 @@ We can not guarantee any single cryptography system is 100% secure. At the same 
 
 ## Case Studies
 
-<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f680">🚀</span> Phala Network: Run zk-Rollup STF (state transition function) in TEE</td><td><a href="../../images/Use-Cases-Multi-Proof.png">Use-Cases-Multi-Proof.png</a></td><td><a href="https://phala.network/posts/introducing-phala-sgxprover-a-twofactor-authentication-solution-for-zkrollups">Phala SGXProver</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f512">🔒</span> Primus: Build Trustless zkTLS with TEE</td><td><a href="../../images/tee_zktls.png">tee_zktls.png</a></td><td><a href="https://medium.com/@primuslabs/primus-x-phala-network-build-trustless-zktls-with-tee-332a26d48c83">Primus zkTLS</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4be">💾</span> Running SP1 zkVM in TEE H200 with Low Overhead</td><td><a href="../../images/zkvm-sp1-in-gpu-tee.jpg">zkvm-sp1-in-gpu-tee.jpg</a></td><td><a href="https://phala.network/posts/performance-benchmark-running-sp1-zkvm-in-tee-h200-with-low-overhead">SP1 zkVM in TEE</a></td></tr></tbody></table>
+<table data-card-size="large" data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></tr></thead><tbody><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f680">🚀</span> Phala Network: Run zk-Rollup STF (state transition function) in TEE</td><td><a href="../../images/Use-Cases-Multi-Proof.png">Use-Cases-Multi-Proof.png</a></td><td><a href="https://phala.network/posts/introducing-phala-sgxprover-a-twofactor-authentication-solution-for-zkrollups">Phala SGXProver</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f512">🔒</span> Primus: Build Trustless zkTLS with TEE</td><td><a href="../../images/tee_zktls.png">tee_zktls.png</a></td><td><a href="https://medium.com/@primuslabs/primus-x-phala-network-build-trustless-zktls-with-tee-332a26d48c83">Primus zkTLS</a></td></tr><tr><td><span data-gb-custom-inline data-tag="emoji" data-code="1f4be">💾</span> Running SP1 zkVM in TEE H200 with Low Overhead</td><td><a href="../../images/zkvm-sp1-in-gpu-tee.jpg">zkvm-sp1-in-gpu-tee.jpg</a></td><td><a href="https://phala.network/posts/performance-benchmark-running-sp1-zkvm-in-tee-h200-with-low-overhead">SP1 zkVM in TEE</a></td></tr></tbody></table>
