--- a/phala-cloud/what-is-phala-cloud/overview.mdx
+++ b/phala-cloud/what-is-phala-cloud/overview.mdx
@@ -2,6 +2,7 @@
 title: Overview of Phala Cloud
 cover: images/phala-docs (1).jpg
 coverY: -101
+icon: "cloud"
 ---
 
 Phala Cloud is a Confidential AI native Neocloud solution that provides you with a secure, user-friendly environment for running AI applications. You can deploy any standard Docker application directly into a **Trusted Execution Environment (TEE)**, ensuring your AI models and data remain confidential and tamper-proof.
