--- a/phala-cloud/attestation/overview.mdx
+++ b/phala-cloud/attestation/overview.mdx
@@ -2,6 +2,7 @@
 description: Security features and remote attestation capabilities of Phala Cloud
   TEE.
 title: What is Attestation Report
+icon: "shield"
 ---
 
 
