--- a/phala-cloud/be-production-ready/ci-cd-automation/ci-cd-integration-best-practices.mdx
+++ b/phala-cloud/be-production-ready/ci-cd-automation/ci-cd-integration-best-practices.mdx
@@ -2,6 +2,7 @@
 description: Best practices and guidelines for production deployments on Phala Cloud.
 hidden: true
 title: CI/CD Integration Best Practices
+icon: "git-merge"
 ---
 
 
