--- a/phala-cloud/be-production-ready/ci-cd-automation/setup-a-ci-cd-pipeline.mdx
+++ b/phala-cloud/be-production-ready/ci-cd-automation/setup-a-ci-cd-pipeline.mdx
@@ -1,6 +1,7 @@
 ---
 description: Best practices and guidelines for production deployments on Phala Cloud.
 title: Setup a CI/CD Pipeline
+icon: "git-branch"
 ---
 
 
