--- a/phala-cloud/be-production-ready/troubleshooting.mdx
+++ b/phala-cloud/be-production-ready/troubleshooting.mdx
@@ -1,6 +1,7 @@
 ---
 description: Best practices and guidelines for production deployments on Phala Cloud.
 title: Troubleshooting Guide
+icon: "wrench"
 ---
 
 
