--- a/phala-cloud/confidential-ai/gpu-tee/faqs.mdx
+++ b/phala-cloud/confidential-ai/gpu-tee/faqs.mdx
@@ -1,6 +1,7 @@
 ---
 description: Frequently asked questions about GPU TEE and confidential AI computing.
 title: FAQs
+icon: "help-circle"
 ---
 
 
