--- a/phala-cloud/confidential-ai/gpu-tee/llm-in-tee.mdx
+++ b/phala-cloud/confidential-ai/gpu-tee/llm-in-tee.mdx
@@ -2,6 +2,7 @@
 description: Run Large Language Models securely in GPU Trusted Execution Environment
   (TEE) for confidential AI.
 title: Host LLM in GPU TEE
+icon: "gpu"
 ---
 
 
