--- a/phala-cloud/faqs.mdx
+++ b/phala-cloud/faqs.mdx
@@ -1,6 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
 title: FAQ about Phala Cloud
+icon: "question"
 ---
 
 ## ❓ FAQs
