--- a/phala-cloud/phala-cloud-user-guides/advanced-deployment-options/setup-a-ci-cd-pipeline.mdx
+++ b/phala-cloud/phala-cloud-user-guides/advanced-deployment-options/setup-a-ci-cd-pipeline.mdx
@@ -1,6 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
 title: Setup a CI/CD Pipeline
+icon: "git-branch"
 ---
 
 
