--- a/phala-cloud/phala-cloud-user-guides/building-with-tee/access-database.mdx
+++ b/phala-cloud/phala-cloud-user-guides/building-with-tee/access-database.mdx
@@ -1,6 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
 title: Access Database
+icon: "database"
 ---
 
 
