--- a/phala-cloud/phala-cloud-user-guides/building-with-tee/create-crypto-wallet.mdx
+++ b/phala-cloud/phala-cloud-user-guides/building-with-tee/create-crypto-wallet.mdx
@@ -1,6 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
 title: Create Crypto Wallet
+icon: "wallet"
 ---
 
 
