--- a/phala-cloud/phala-cloud-user-guides/create-cvm/overview.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/overview.mdx
@@ -1,6 +1,7 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
 title: Overview
+icon: "server"
 ---
 
 ## Choose Your Preferred Method
