--- a/phala-cloud/phala-cloud-user-guides/create-cvm/upgrade-application.mdx
+++ b/phala-cloud/phala-cloud-user-guides/create-cvm/upgrade-application.mdx
@@ -1,6 +1,7 @@
 ---
 description: Create and manage Confidential Virtual Machines (CVMs) on Phala Cloud.
 title: Upgrade Application
+icon: "refresh-cw"
 ---
 
 
