--- a/dstack/acknowledgement.mdx
+++ b/dstack/acknowledgement.mdx
@@ -1,7 +1,7 @@
 ---
 description: Deploy confidential applications with Dstack - a TEE-based infrastructure
   platform.
-icon: face-saluting
+icon: book-open-text
 title: Acknowledgement
 ---
 
