--- a/dstack/faqs.mdx
+++ b/dstack/faqs.mdx
@@ -2,6 +2,7 @@
 description: Deploy confidential applications with Dstack - a TEE-based infrastructure
   platform.
 title: FAQs
+icon: table-of-contents
 ---
 
 
