--- a/dstack/getting-started.mdx
+++ b/dstack/getting-started.mdx
@@ -1,7 +1,7 @@
 ---
 description: Set up and deploy your first confidential application using Dstack TEE
   infrastructure.
-icon: robot-astromech
+icon: bot
 title: Getting Started
 ---
 
