--- a/dstack/overview.mdx
+++ b/dstack/overview.mdx
@@ -1,7 +1,7 @@
 ---
 description: Deploy confidential applications with Dstack - a TEE-based infrastructure
   platform.
-icon: ufo
+icon: book-open
 title: Overview
 ---
 
