--- a/phala-cloud/be-production-ready/performance-report.mdx
+++ b/phala-cloud/be-production-ready/performance-report.mdx
@@ -1,7 +1,7 @@
 ---
 description: Comprehensive performance analysis of Phala Cloud's TEE infrastructure.
 title: Performance Report
-icon: "bar-chart-3"
+icon: "scroll-text"
 ---
 
 ### I\. Introduction
