--- a/phala-cloud/be-production-ready/production-checklist.mdx
+++ b/phala-cloud/be-production-ready/production-checklist.mdx
@@ -1,7 +1,7 @@
 ---
 description: Production checklist for launch.
 title: Production Checklist
-icon: "check-square"
+icon: "shield-check"
 ---
 
 
