--- a/phala-cloud/faqs.mdx
+++ b/phala-cloud/faqs.mdx
@@ -1,7 +1,7 @@
 ---
+icon: "table-of-contents"
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
 title: FAQ about Phala Cloud
-icon: "question"
 ---
 
 ## ❓ FAQs
