--- a/phala-cloud/references/cloud-api-beta/overview.mdx
+++ b/phala-cloud/references/cloud-api-beta/overview.mdx
@@ -1,7 +1,7 @@
 ---
 description: Deploy confidential applications with Phala Cloud's managed TEE infrastructure.
-title: Cloud API
-icon: "code"
+title: Phala Cloud API
+icon: "webhook"
 ---
 
 
