--- a/dstack/local-development.mdx
+++ b/dstack/local-development.mdx
@@ -1,7 +1,7 @@
 ---
 description: Deploy confidential applications with Dstack - a TEE-based infrastructure
   platform.
-icon: desktop
+icon: computer
 title: Local Development Guide
 ---
 
