--- a/phala-cloud/confidential-ai/gpu-tee/inference-api.mdx
+++ b/phala-cloud/confidential-ai/gpu-tee/inference-api.mdx
@@ -2,7 +2,7 @@
 description: Secure LLM inference API running in GPU Trusted Execution Environment
   (TEE) for confidential AI computing.
 title: GPU TEE Inference API
-icon: "api"
+icon: "webhook"
 ---
 
 
