fix card image and links

--- a/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
+++ b/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
@@ -1,9 +1,28 @@
 ---
-description: Security features and remote attestation capabilities of Phala Cloud
+description:
+  Security features and remote attestation capabilities of Phala Cloud
   TEE.
 title: Security Architecture
 icon: "building"
 ---
 
-
-<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Decentralized Root-of-Trust</td><td><a href="../../images/image (6) (1) (1).png">image (6) (1) (1).png</a></td><td></td></tr><tr><td>Zero Trust HTTPS (TLS)</td><td><a href="../../images/image (11).png">image (11).png</a></td><td><a href="../../dstack/design-documents/tee-controlled-domain-certificates.md">tee-controlled-domain-certificates.md</a></td></tr><tr><td>Key Management Service (KMS)</td><td><a href="../../images/image (11).png">image (11).png</a></td><td><a href="../../dstack/design-documents/key-management-protocol.md">key-management-protocol.md</a></td></tr></tbody></table>
+<Columns cols={3}>
+  <Card
+    img="/images/image (6) (1) (1).png"
+    href="/dstack/design-documents/whitepaper"
+  >
+    Decentralized Root-of-Trust
+  </Card>
+  <Card
+    img="../../images/image (11).png"
+    href="/dstack/design-documents/decentralized-root-of-trust"
+  >
+    Zero Trust HTTPS (TLS)
+  </Card>
+  <Card
+    img="../../images/image (6) (1) (1).png"
+    href="/dstack/design-documents/key-management-protocol"
+  >
+    Key Management Service (KMS)
+  </Card>
+</Columns>
