update layout of page

--- a/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
+++ b/phala-cloud/tees-attestation-and-zero-trust-security/security-architecture.mdx
@@ -6,7 +6,7 @@ title: Security Architecture
 icon: "building"
 ---
 
-<Columns cols={3}>
+<Columns cols={1}>
   <Card
     img="/images/image (6) (1) (1).png"
     href="/dstack/design-documents/whitepaper"
@@ -14,13 +14,13 @@ icon: "building"
     Decentralized Root-of-Trust
   </Card>
   <Card
-    img="../../images/image (11).png"
+    img="/images/image (11).png"
     href="/dstack/design-documents/decentralized-root-of-trust"
   >
     Zero Trust HTTPS (TLS)
   </Card>
   <Card
-    img="../../images/image (6) (1) (1).png"
+    img="/images/image (11).png"
     href="/dstack/design-documents/key-management-protocol"
   >
     Key Management Service (KMS)
