fix image layout bug

--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -8,8 +8,27 @@ With [**Phala Cloud Templates**](https://cloud.phala.network/templates), you can
 
 Check out our quick start guides below:
 
-<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-cover data-type="files"></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Launch an Eliza Agent</td><td><a href="/images/elizaos.png">elizaos.png</a></td><td><a href="/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent">launch-an-eliza-agent</a></td></tr><tr><td>Next.js Application</td><td><a href="/images/nextjs-starter.png">nextjs-starter.png</a></td><td><a href="/phala-cloud/getting-started/explore-templates/start-from-template#next.js-template">Next.js Template</a></td></tr><tr><td>Python Backend</td><td><a href="/images/python-starter.png">python-starter.png</a></td><td><a href="/phala-cloud/getting-started/explore-templates/start-from-template#python-template">Python Template</a></td></tr></tbody></table>
+<Columns cols={3}>
+  <Card
+    img="/images/elizaos.png"
+    href="/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent"
+  >
+    Launch an Eliza Agent
+  </Card>
+  <Card
+    img="/images/nextjs-starter.png"
+    href="/phala-cloud/getting-started/explore-templates/start-from-template#next.js-template"
+  >
+    Next.js Application
+  </Card>
+  <Card
+    img="/images/python-starter.png"
+    href="/phala-cloud/getting-started/explore-templates/start-from-template#python-template"
+  >
+    Python Backend
+  </Card>
+</Columns>
 
 <Frame>
-    <img src="/images/image (23).png" />
+  <img src="/images/image (23).png" />
 </Frame>
